feat(proactive): add Proactive 60 notification system with Slack delivery
New proactive notification infrastructure:
- Slack edge functions: morning-brief, email-reply-alert, stale-deals, post-meeting
- Human-in-the-loop: hitl-send-followup-email for email approval workflow
- Proactive shared modules: dedupe, delivery (Slack/in-app), recipients, settings
- Vercel cron API routes for scheduled notification triggers
- NotificationCenter component for in-app notification management
- Database migrations for proactive notification settings and schema

Enhanced existing functions:
- slack-meeting-prep: improved block formatting
- slack-post-meeting: full implementation with action items and follow-ups
- slack-sales-assistant: added proactive notification handlers
- slackBlocks: comprehensive Block Kit utilities for rich Slack messages

--- a/vercel.json
+++ b/vercel.json
@@ -177,6 +177,26 @@
       "schedule": "5 8 * * *"
     },
     {
+      "path": "/api/cron/slack-morning-brief",
+      "schedule": "0 8 * * *"
+    },
+    {
+      "path": "/api/cron/slack-stale-deals",
+      "schedule": "0 9 * * *"
+    },
+    {
+      "path": "/api/cron/slack-email-reply-alert",
+      "schedule": "*/5 * * * *"
+    },
+    {
+      "path": "/api/cron/slack-meeting-prep",
+      "schedule": "*/5 * * * *"
+    },
+    {
+      "path": "/api/cron/slack-post-meeting",
+      "schedule": "*/5 * * * *"
+    },
+    {
       "path": "/api/cron/slack-deal-room-archive",
       "schedule": "10 * * * *"
     },
