--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "react-i18next": "^16.3.5",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "react-resizable-panels": "^4.2.0",
     "react-router-dom": "^6.21.2",
     "react-virtuoso": "^4.14.1",
     "react-window": "^1.8.11",
