--- a/vercel.json
+++ b/vercel.json
@@ -165,6 +165,10 @@
       "schedule": "0 6 * * *"
     },
     {
+      "path": "/api/cron/google-token-refresh",
+      "schedule": "30 */4 * * *"
+    },
+    {
       "path": "/api/cron/google-context-sync",
       "schedule": "*/15 * * * *"
     },
