--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -58,3 +58,7 @@ verify_jwt = false
 # Health check endpoint - public access for monitoring services
 [functions.health]
 verify_jwt = false
+
+# Fireflies integration - we handle auth manually inside the function
+[functions.fireflies-sync]
+verify_jwt = false
