feat(calendar): Add Google Calendar webhook integration and S3 recording storage
- Implement Google Calendar push notification subscriptions via webhook
- Add webhook handler for calendar event updates
- Create googleCalendarWebhookService for subscription management
- Add org_id support to calendar_calendars table
- Add attendees tracking to calendar_events table
- Add message tracking to calendar_channels table
- Update calendar sync functions for webhook integration
- Add S3 recording storage setup and deployment scripts
- Remove test seed migrations (staging users)
- Update config and recording processing functions

Related services and infrastructure setup for production calendar integration.

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -78,3 +78,13 @@ verify_jwt = false
 # Fireflies integration - we handle auth manually inside the function
 [functions.fireflies-sync]
 verify_jwt = false
+
+# Google Calendar webhook - receives push notifications from Google Calendar API
+# Google sends unauthenticated requests, we verify via channel_id in database
+[functions.google-calendar-webhook]
+verify_jwt = false
+
+# Google Calendar sync - called by webhook to perform incremental sync
+# Webhook calls this internally, so needs to bypass JWT verification
+[functions.google-calendar-sync]
+verify_jwt = false
