fix: MeetingBaaS calendar connection and API response handling
MeetingBaaS Connect Calendar:
- Switch from supabase.functions.invoke() to direct fetch() for auth header control
- Add response format normalization for different MeetingBaaS API formats
- Handle multiple ID field names (id, calendar_id, calendarId, uuid)
- Add comprehensive logging for debugging
- Add safety checks before database insert

Edge Function improvements:
- Enhanced error handling with detailed logging
- Better extraction of calendar IDs from list API responses
- Normalize calendar objects before database upsert

Other fixes:
- Updated notification service
- Email action center improvements
- Slack email reply alert updates
- Migration file cleanup

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -93,3 +93,13 @@ verify_jwt = false
 # External service sends unauthenticated requests, we verify via signature
 [functions.meetingbaas-webhook]
 verify_jwt = false
+
+# Process recording - called internally by meetingbaas-webhook
+# Triggered by webhook handler, so no JWT verification needed
+[functions.process-recording]
+verify_jwt = false
+
+# MeetingBaaS Connect Calendar - called from frontend with user JWT
+# We handle auth verification manually inside the function
+[functions.meetingbaas-connect-calendar]
+verify_jwt = false
