--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,14 @@
 # SUPABASE - Primary Database (Required)
 # -----------------------------------------------------------------------------
 # Get these from: Supabase Dashboard > Settings > API
+# Note: Both VITE_ prefixed (client-side) and non-prefixed (Vercel build) versions needed
+# Client-side variables (VITE_ prefix exposes to browser via import.meta.env)
 VITE_SUPABASE_URL=https://your-project.supabase.co
 VITE_SUPABASE_ANON_KEY=your-anon-key
+# Server-side/build variables (non-prefixed for Vercel compatibility)
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_ANON_KEY=your-anon-key
+# Service credentials (never exposed to client)
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 SUPABASE_ACCESS_TOKEN=your-access-token
 SUPABASE_PROJECT_ID=your-project-id
