--- a/.github/workflows/sync-prod-to-staging.yml
+++ b/.github/workflows/sync-prod-to-staging.yml
@@ -29,7 +29,7 @@ jobs:
           STAGING_PASSWORD: ${{ secrets.STAGING_DATABASE_PASSWORD }}
         run: |
           PROD_REF="ygdpgliavpxeugaajgrb"
-          STAGING_REF="dzypskjhoupsdwfsrkeo"
+          STAGING_REF="caerqjzvuerejfrdtygb"
           
           PROD_URL="postgresql://postgres.${PROD_REF}:${PROD_PASSWORD}@aws-1-eu-west-1.pooler.supabase.com:5432/postgres"
           STAGING_URL="postgresql://postgres.${STAGING_REF}:${STAGING_PASSWORD}@aws-1-eu-west-1.pooler.supabase.com:5432/postgres"
