chore: Migrate testing infrastructure to Playwriter and update staging setup
## Testing Infrastructure
- Migrate from Playwright to Playwriter (vitest-based E2E testing)
- Add playwriter setup fixtures and assertions
- Update all test scripts in package.json
- Add vitest.config.e2e.ts for E2E test configuration
- Mark playwright.staging.config.ts as deprecated

## Staging Environment
- Update staging branch ref to caerqjzvuerejfrdtygb (new staging branch)
- Switch to IPv4 direct database connections
- Update sync-prod-to-staging-direct.sh script
- Add .gitignore entries for test artifacts and temp files

## Supabase Configuration
- Add edge function configs for new endpoints:
  - fetch-company-logo, justcall-config, savvycal-config
  - hubspot-admin, google-oauth-initiate, hubspot-oauth-initiate
- Add RPC function search path fix migration
- Update deep-enrich-organization function

## Documentation
- Add STAGING_TEST_CHECKLIST.md for deployment validation
- Add PLAYWRITER_MIGRATION_GUIDE.md
- Add PLAYWRITER_SETUP.md

## Test Updates
- Update all E2E tests for Playwriter compatibility
- Update test fixtures and data
- Add proper assertions and setup helpers

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -103,3 +103,27 @@ verify_jwt = false
 # We handle auth verification manually inside the function
 [functions.meetingbaas-connect-calendar]
 verify_jwt = false
+
+# Company logo fetcher - public utility function, no auth needed
+# Fetches logos from logo.dev and caches in S3
+[functions.fetch-company-logo]
+verify_jwt = false
+
+# Integration config functions - called from browser with user JWT
+# We handle auth verification manually inside the functions (CORS preflight needs to work)
+[functions.justcall-config]
+verify_jwt = false
+
+[functions.savvycal-config]
+verify_jwt = false
+
+[functions.hubspot-admin]
+verify_jwt = false
+
+# OAuth initiate functions - called from browser to start OAuth flows
+# Handle auth internally (CORS preflight needs to work)
+[functions.google-oauth-initiate]
+verify_jwt = false
+
+[functions.hubspot-oauth-initiate]
+verify_jwt = false
