--- a/package.json
+++ b/package.json
@@ -39,14 +39,15 @@
     "test:unit:watch": "vitest tests/unit",
     "test:unit:coverage": "vitest run tests/unit --coverage",
     "test:integration": "vitest run tests/integration",
-    "test:e2e": "playwright test",
-    "test:e2e:headed": "playwright test --headed",
-    "test:e2e:ui": "playwright test --ui",
-    "test:e2e:staging": "playwright test --config=playwright.staging.config.ts",
-    "test:e2e:staging:headed": "playwright test --config=playwright.staging.config.ts --headed",
-    "test:regression": "playwright test tests/regression",
+    "test:e2e": "vitest run --config=vitest.config.e2e.ts",
+    "test:e2e:headed": "vitest run --config=vitest.config.e2e.ts --reporter=verbose",
+    "test:e2e:ui": "vitest --ui --config=vitest.config.e2e.ts",
+    "test:e2e:all": "concurrently \"npm run dev\" \"wait-on http://127.0.0.1:5175 && npm run test:e2e\"",
+    "test:e2e:staging": "NODE_ENV=staging vitest run --config=vitest.config.e2e.ts",
+    "test:e2e:staging:headed": "NODE_ENV=staging vitest run --config=vitest.config.e2e.ts --reporter=verbose",
+    "test:regression": "vitest run tests/regression",
     "test:all": "npm run test:unit && npm run test:integration && npm run test:e2e && npm run test:regression",
-    "test:ci": "npm run test:unit -- --reporter=junit --outputFile=test-results-unit.xml && npm run test:integration -- --reporter=junit --outputFile=test-results-integration.xml && npm run test:e2e -- --reporter=junit",
+    "test:ci": "npm run test:unit -- --reporter=junit --outputFile=test-results-unit.xml && npm run test:integration -- --reporter=junit --outputFile=test-results-integration.xml && npm run test:e2e -- --reporter=junit --outputFile=test-results-e2e.xml",
     "test:contact-api": "./scripts/run-contact-api-tests.sh",
     "test:contact-api:coverage": "./scripts/run-contact-api-tests.sh --coverage",
     "test:contact-api:integration": "./scripts/run-contact-api-tests.sh --integration",
@@ -57,10 +58,11 @@
     "test:memory:watch": "vitest tests/memory --watch",
     "setup:playwright-user": "tsx scripts/setup-playwright-user.ts",
     "create-test-user": "node scripts/create-test-user.js",
+    "verify:playwriter": "tsx tests/verify-playwriter-setup.ts",
     "test:memory:coverage": "vitest run tests/memory --coverage",
-    "playwright": "playwright test",
-    "playwright:ui": "playwright test --ui",
-    "playwright:report": "playwright show-report",
+    "playwriter": "vitest run --config=vitest.config.e2e.ts",
+    "playwriter:ui": "vitest --ui --config=vitest.config.e2e.ts",
+    "playwriter:watch": "vitest --config=vitest.config.e2e.ts",
     "version:update": "node scripts/update-version.js",
     "release:add": "node scripts/add-release.js",
     "release:build": "node scripts/build-release.js",
@@ -179,7 +181,6 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@playwright/test": "^1.40.1",
     "@sentry/vite-plugin": "^4.6.1",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.2.0",
@@ -195,6 +196,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.16",
+    "concurrently": "^9.2.1",
     "dompurify": "^3.2.6",
     "dotenv": "^17.2.2",
     "eslint": "^8.55.0",
@@ -203,6 +205,8 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "glob": "^11.0.3",
     "jsdom": "^23.2.0",
+    "playwright-core": "^1.57.0",
+    "playwriter": "^0.0.42",
     "postcss": "^8.4.32",
     "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "^3.4.0",
@@ -210,6 +214,7 @@
     "tsx": "^4.20.4",
     "typescript": "^5.2.2",
     "vite": "^6.3.5",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "wait-on": "^9.0.3"
   }
 }
