fix: Restrict process map links to platform admins & improve Slack UX
- Hide Process Map button from non-platform admins in integration modals
- Fix deal value threshold input to save on blur instead of every digit
- Update .gitignore to exclude data migration scripts

--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,9 @@ watch-*.ts
 # Env backups
 envs/
 restore-*.mjs
+
+# Data migration scripts
+production-data.sql
+*.sql.dump
+check-staging-*.mjs
+setup-staging-*.mjs
