fix: Add includeFiles for api/lib to Vercel functions config

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,11 @@
 {
   "buildCommand": "npm run build",
   "framework": "vite",
+  "functions": {
+    "api/**/*.ts": {
+      "includeFiles": "api/lib/**"
+    }
+  },
   "headers": [
     {
       "source": "/api/(.*)",
