fix: Include @opentelemetry packages in function bundle

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "framework": "vite",
   "functions": {
     "api/**/*.ts": {
-      "includeFiles": "api/lib/**"
+      "includeFiles": ["api/lib/**", "node_modules/@opentelemetry/**"]
     }
   },
   "headers": [
