chore(gitignore): ignore local restore artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,7 @@ junit.xml
 test-results/
 playwright-report/
 playwright/.cache/
+playwright-report-staging/
 
 # IDE and editor specific
 .vscode-test/
@@ -146,3 +147,10 @@ test-*.ts
 verify-*.ts
 watch-*.ts
 .cursor/plans/*.plan.md
+
+# Local-only MCP / restore artifacts (never commit)
+.mcp.local.json
+envs/
+envs.zip
+docs/*.zip
+restore-*.mjs
