--- a/package.json
+++ b/package.json
@@ -196,6 +196,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.16",
+    "baseline-browser-mapping": "^2.9.17",
     "dompurify": "^3.2.6",
     "dotenv": "^17.2.2",
     "eslint": "^8.55.0",
