--- a/package.json
+++ b/package.json
@@ -180,6 +180,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@aws-sdk/client-s3": "^3.975.0",
     "@playwright/test": "^1.57.0",
     "@sentry/vite-plugin": "^4.6.1",
     "@testing-library/dom": "^10.4.1",
