--- a/vercel.json
+++ b/vercel.json
@@ -166,7 +166,7 @@
     },
     {
       "path": "/api/cron/google-token-refresh",
-      "schedule": "30 */4 * * *"
+      "schedule": "0 * * * *"
     },
     {
       "path": "/api/cron/google-context-sync",
