feat: comprehensive updates - Fathom sync improvements, S3 storage, security hardening
Major changes:
- Smart incremental Fathom sync to prevent duplicates
- S3 storage system with cost tracking
- Security hardening migrations and monitoring
- Gladia transcription polling system
- MeetingBaaS webhook improvements
- Sentry configuration and verification docs

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,13 @@ SUPABASE_ACCESS_TOKEN=your-access-token
 SUPABASE_PROJECT_ID=your-project-id
 
 # -----------------------------------------------------------------------------
+# ENVIRONMENT
+# -----------------------------------------------------------------------------
+# Controls Sentry initialization - only enabled in production
+# Options: development | staging | production
+VITE_ENVIRONMENT=development
+
+# -----------------------------------------------------------------------------
 # APPLICATION URLS
 # -----------------------------------------------------------------------------
 # Local: http://localhost:5175 | Prod: https://app.use60.com
