feat(env): add development environment with Supabase branch
Set up isolated development environment branched from production
(wbgmnyekgqklggilgqag) with its own database and edge functions.

- Add .env.development config (gitignored, contains secrets)
- Update npm run dev to default to development mode
- Add npm run dev:production for production mode
- Add isDevelopment detection in config.ts
- Add /new-environment Claude skill for future env setup
- Update CLAUDE.md project references table

--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "packages/*"
   ],
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --mode development",
     "dev:staging": "vite --mode staging",
+    "dev:production": "vite --mode production",
     "dev:api": "node server/api.js",
     "dev:api-optimized": "node server/api-optimized.js",
     "dev:api-production": "node server/api-production.js",
